--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -4,6 +4,10 @@
         <domain includeSubdomains="true">localhost</domain>
         <domain includeSubdomains="true">10.0.2.2</domain>
         <domain includeSubdomains="true">127.0.0.1</domain>
+        <domain includeSubdomains="true">puma.streemlion.com</domain>
+        <domain includeSubdomains="true">streemlion.com</domain>
+        <domain includeSubdomains="true">app.chillhop.com</domain>
+        <domain includeSubdomains="true">manager.dhector.fr</domain>   
     </domain-config>
     <base-config cleartextTrafficPermitted="false">
         <trust-anchors>
