better meditation screen and added navbar

--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -7,7 +7,7 @@
         <domain includeSubdomains="true">puma.streemlion.com</domain>
         <domain includeSubdomains="true">streemlion.com</domain>
         <domain includeSubdomains="true">app.chillhop.com</domain>
-        <domain includeSubdomains="true">manager.dhector.fr</domain>  
+        <domain includeSubdomains="true">manager.dhectar.fr</domain>  
         <domain includeSubdomains="true">dhector.fr</domain> 
         <domain includeSubdomains="true">216.245.218.194</domain>
 
